fix horizontal scroll ios

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -891,6 +891,7 @@ img {
 }
 
 @include breakpoint(xs) {
+	html,
 	body {
 	    overflow-x: hidden;
 	}
